completed responsive price functionality

--- a/js-micro-components/interactive-pricing/index.html
+++ b/js-micro-components/interactive-pricing/index.html
@@ -34,7 +34,10 @@
             <div class="main__content--top">
               <div>
                 <p>100k Pageviews</p>
-                <p><span class="price">&dollar;16.00</span> / month</p>
+                <p>
+                  <span data-month="month" class="price">&dollar;16.00</span> /
+                  month
+                </p>
               </div>
               <div>
                 <div class="price__track">
