completed functionality for range slider

--- a/js-micro-components/interactive-pricing/index.html
+++ b/js-micro-components/interactive-pricing/index.html
@@ -40,12 +40,14 @@
                 </p>
               </div>
               <div>
-                <div class="price__track">
-                  <div class="price__fill"></div>
-                  <div class="slider-container">
-                    <img src="./images/icon-slider.svg" alt="" />
-                  </div>
-                </div>
+                <input
+                  type="range"
+                  min="0"
+                  max="100"
+                  step="1"
+                  class="range--slider"
+                  value="16"
+                />
               </div>
               <div>
                 <div>
