completed interactive pricing and fully responsive

--- a/js-micro-components/interactive-pricing/index.html
+++ b/js-micro-components/interactive-pricing/index.html
@@ -34,28 +34,31 @@
             <div class="main__content--top">
               <div>
                 <p>100k Pageviews</p>
-                <p>
+                <p class="priceText">
                   <span data-month="month" class="price">&dollar;16.00</span> /
                   month
                 </p>
-              </div>
-              <div>
-                <input
-                  type="range"
-                  min="0"
-                  max="100"
-                  step="1"
-                  class="range--slider"
-                  value="16"
-                />
+                <div>
+                  <input
+                    type="range"
+                    min="0"
+                    max="100"
+                    step="1"
+                    class="range--slider"
+                    value="16"
+                  />
+                </div>
               </div>
               <div>
                 <div>
                   <p>Monthly Billing</p>
                 </div>
-                <div class="toggle--btn">
-                  <span></span>
+                <div>
+                  <div class="toggle--btn">
+                    <span></span>
+                  </div>
                 </div>
+
                 <div>
                   <p>Yearly Billing <span>25% discount</span></p>
                 </div>
